--- a/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Member/Renting/Index.cshtml
+++ b/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Member/Renting/Index.cshtml
@@ -58,11 +58,15 @@
                 <td>
                     @if (item.RentingStatus == 0)
                     {
-                        <span class="text-danger">Renting</span>
+                        <span class="text-warning">Waiting</span>
                     }
                     else if (item.RentingStatus == 1)
                     {
                         <span class="text-success">Done</span>
+                    }
+                    else if (item.RentingStatus == 2)
+                    {
+                        <span class="text-danger">Renting</span>
                     }
                 </td>
                 <td>
